--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-inject-env",
   "version": "2.1.0",
-  "description": "Tool to inject environment variables into your React build",
+  "description": "Tool to inject environment variables into your React build (Forked)",
   "author": "es-lynn",
   "license": "MIT",
-  "repository": "https://github.com/codegowhere/react-inject-env",
+  "repository": "https://github.com/hadiigna/react-inject-env",
   "main": "dist/index.js",
   "bin": {
     "react-inject-env": "dist/cli.js"
