add: Make environment variable prefix configurable
For frontend apps that expects different prefix like Vite (`VITE_*`)

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "prepublish": "tsc --incremental false",
+    "prepack": "tsc --incremental false",
     "compile": "tsc --noEmit && eslint src/**/*.ts tests/**/*.ts index.ts",
     "test": "jest",
     "test:coverage": "jest --collectCoverage",
